components/policies/pod-security-standards/baseline/ban-apparmor-annotation/policy.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: ban-apparmor-annotation
  labels:
    app.kubernetes.io/name: ban-apparmor-annotation
    app.kubernetes.io/component: pod-security-standards-baseline
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups:    [""]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["pods"]
        scope:        "Namespaced"
      - apiGroups:    ["apps"]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["daemonsets", "deployments", "statefulsets"]
        scope:        "Namespaced"
      - apiGroups:    ["batch"]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["cronjobs", "jobs"]
        scope:        "Namespaced"
  validations:
    - expression:
        object.metadata.?annotations.orValue({}).all(key,
          !key.startsWith('container.apparmor.security.beta.kubernetes.io/'))
      message: The annotation 'container.apparmor.security.beta.kubernetes.io' is deprecated. Use the field securityContext.appArmorProfile.type instead
      reason: Invalid
    - expression:
        object.spec.?template.?metadata.?annotations.orValue({}).all(key,
          !key.startsWith('container.apparmor.security.beta.kubernetes.io/'))
      message: The annotation 'container.apparmor.security.beta.kubernetes.io' is deprecated. Use the field securityContext.appArmorProfile.type instead
      reason: Invalid
    - expression:
        object.spec.?jobTemplate.?spec.?template.?metadata.?annotations.orValue({}).all(key,
          !key.startsWith('container.apparmor.security.beta.kubernetes.io/'))
      message: The annotation 'container.apparmor.security.beta.kubernetes.io' is deprecated. Use the field securityContext.appArmorProfile.type instead
      reason: Invalid
  auditAnnotations:
    - key: name
      valueExpression: string(object.metadata.name)
