components/policies/pod-security-standards/baseline/ban-apparmor-annotation/test/job-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob01
spec:
  template:
    metadata:
      annotations:
        container.apparmor.security.beta.kubernetes.io/container02: Unconfined
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
