components/policies/pod-security-standards/baseline/ban-apparmor-annotation/test/job-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob01
spec:
  template:
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
