components/policies/pod-security-standards/baseline/ban-apparmor-annotation/test/pod-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  annotations:
    container.apparmor.security.beta.kubernetes.io/container02: Unconfined
spec:
  containers:
    - name: container01
      image: dummyimagename
---
